--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"preview": "vite preview",
-		"relay": "relay-compiler"
-	},
-	"dependencies": {
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-relay": "^12.0.0"
-	},
-	"devDependencies": {
-		"@types/react": "^17.0.33",
-		"@types/react-dom": "^17.0.10",
-		"@vitejs/plugin-react": "^1.0.7",
-		"typescript": "^4.4.4",
-		"vite": "^2.7.0",
-		"babel-plugin-relay": "^12.0.0",
-		"graphql": "^15.8.0",
-		"relay-config": "^12.0.1"
-	}
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "relay": "relay-compiler",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-relay": "^12.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@vitejs/plugin-react": "^1.0.7",
+    "babel-plugin-relay": "^12.0.0",
+    "graphql": "^15.8.0",
+    "prettier": "2.5.1",
+    "relay-config": "^12.0.1",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.0"
+  }
 }
